--- a/views/categories/allTags.ejs
+++ b/views/categories/allTags.ejs
@@ -6,7 +6,7 @@
     %>
 
     <div class="content">
-      <h2 class="page-title">Find a book by tags</h2>
+      <!-- <h2 class="page-title">Find a book by tags</h2> -->
       <div class="content-box">
         <% tags.forEach((tag) => { %>
           <div class="tag-container">
