--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,29 +1,30 @@
 <nav class="nav-container">
   
   <div class="nav-headers">
-
-    <div class="header top all-blogs">
-      <a href="/blogs/allBlogs">Blogs</a>
+    <div class="empty-header">
     </div>
+    <div class="header-cluster">
+      <div class="header all-blogs">
+        <a href="/blogs/allBlogs">Blogs</a>
+      </div>
 
-    <div class="header top all-authors">
-      <a href="/categories/allAuthors">Authors</a>
-    </div>
+      <div class="header all-authors">
+        <a href="/categories/allAuthors">Authors</a>
+      </div>
 
-    <div class="header bottom all-tags">
-      <a href="/categories/allTags">Tags</a>
-    </div>
+      <div class="header all-tags">
+        <a href="/categories/allTags">Tags</a>
+      </div>
     
-    <div class="create-header">
-      <a href="/blogs/create"><img
-        class="create-button"
-        src="../../images/add-button-opt.svg"
-        alt="An icon with a plus sign that directs you to the create page."
-        /></a>
+    </div>
+    <div class="header-single">
+      <div class="create-header">
+        <a href="/blogs/create"><img
+          class="create-button"
+          src="../../images/add-button-opt.svg"
+          alt="An icon with a plus sign that directs you to the create page."
+          /></a>
+        </div>
       </div>
     </div>
 </nav>
-
-<!-- <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
-font-family: 'Cinzel', serif;
-font-family: 'Lora', serif; -->
