--- a/public/css/universal.css
+++ b/public/css/universal.css
@@ -22,6 +22,12 @@ h1,
   font-family: "Charm", cursive;
 }
 
+h1,
+h2,
+h3 {
+  line-height: 1em;
+}
+
 a:link,
 a:visited {
   color: #8e6032ff;
@@ -29,6 +35,7 @@ a:visited {
 }
 a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .title-banner-container > a {
@@ -38,6 +45,10 @@ a:hover {
 .title-banner-image {
   display: flex;
 }
+
+/* <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+font-family: 'Cinzel', serif;
+font-family: 'Lora', serif; */
 
 /* -------------------------------- nav bar ---------------------------------- */
 
@@ -57,8 +68,9 @@ a:hover {
 .nav-headers {
   display: flex;
   margin: auto;
+
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   padding: 2px;
 
@@ -67,8 +79,16 @@ a:hover {
   background: #2e2525ff;
   border-left: 3px solid #704c28;
   border-right: 3px solid #704c28;
+  border-bottom: 3px solid #704c28;
+  border-radius: 4px;
 
-  width: 700px;
+  width: 800px;
+}
+
+.header-cluster {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .nav-headers .header {
