--- a/views/blogs/allBlogs.ejs
+++ b/views/blogs/allBlogs.ejs
@@ -6,7 +6,7 @@
     %>
 
     <div class="content">
-      <h2 class="page-title">All Blogs</h2>
+      <!-- <h2 class="page-title">All Blogs</h2> -->
       <div class="content-box">
         <% if (blogs.length > 0) { for (var i = 0; i < blogs.length; i++ ) { %>
           <div class="blog-container">
