--- a/views/categories/allAuthors.ejs
+++ b/views/categories/allAuthors.ejs
@@ -6,7 +6,7 @@
     %>
 
     <div class="content">
-      <h2 class="page-title">All Authors</h2>
+      <!-- <h2 class="page-title">All Authors</h2> -->
       <div class="content-box">
         <% if (authors.length > 0) { for (var i = 0; i < authors.length; i++ ) { %>
           <div class="author-container">
