--- a/views/categories/editAuthor.ejs
+++ b/views/categories/editAuthor.ejs
@@ -4,14 +4,26 @@
   <body>
     <%- include('../partials/header.ejs') %> <%- include('../partials/nav.ejs') %> 
     <div class="content">
-      <h2 class="page-title">Edit author here!</h2>
       <div class="content-box">
 
 
         <form action="/categories/edit/<%= author.name %>" method="POST" id="edit-author-data"> 
           <h1><%= author.name %></h1>
           <div class="form-row-full">
-            <h3>Books Written: </h3> <p> <%= author.booksWritten %> </p>
+            <p class="booksWritten">Books Written:  
+              
+              <% if (author.booksWritten.length === 0) { %> 
+                <p class="books">
+                  <%= "No books written by this author." %> 
+                </p> 
+              <% } else { %> 
+
+                <%= author.booksWritten.join(', ') %> 
+
+              <% } %> 
+              </p>
+              <%# author.booksWritten %> 
+            
           </div>
 
           <div class="form-row-full">
