--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,5 @@
   <link rel="stylesheet" href="/css/contentBox.css" />
   <link rel="stylesheet" href="/css/form.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Estonia&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
 </head>
